--- a/package.json
+++ b/package.json
@@ -49,16 +49,17 @@
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "dart-sass": "^1.25.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "json-server": "^0.16.3",
-    "node-sass": "^6.0.0",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.0",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
     "typescript": "^4.3.4",
